# AI-Assistant_loop

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
config/: agent.yaml  chunking.yaml  corpus.yaml  eval_retrieve.yaml  mcp_servers.yaml  models.yaml  paths.yaml  routing.yaml  session.yaml  tools.yaml  tools_enabled.yaml
scripts/: bootstrap_first_run.py  eval_retrieve.py  ingest_all.py  ingest_one.py  probe_anysearch.py  probe_matlab_mcp.py  run_agent.py  run_echo.py  smoke_async_hitl.py  smoke_llm.py  smoke_macro_commodities_journey.py  smoke_n1_agent_mcp.py  smoke_n1_mcp_io.py  smoke_pinned_broker.py  smoke_retrieve.py  smoke_work_items_journey.py  test_matlab_mcp_launch.py
scripts/Tools/: README.md  __init__.py  fetch_page.py  kb_retrieve.py  mineru_client.py  mineru_parse.py  run_local_script.py  tavily_search.py
src/: __init__.py
src/agent/: amend.py  checkpoint.py  context_projection.py  evidence.py  file_guard.py  graph.py  interrupt.py  orchestrator.py  reflect.py  session.py  tool_io.py  work_items.py
src/api/: bootstrap.py  jobs.py  main.py  schemas.py
src/control/: retrieval_gate.py
src/ingest/: mineru_loader.py
src/ingest/chunker/: __init__.py  models.py  multimodal.py
src/llm/: __init__.py  client.py
src/memory/: broker.py  error_memory.py  pinned.py  qdrant_store.py
src/tasks/: __init__.py  discovery.py  protocol.py  registry.py
src/tools/: __init__.py  allowlist.py  discovery.py  mcp_adapter.py  mcp_session.py  mcp_types.py  protocol.py  registry.py  search_stack.py
src/util/: console_io.py
web/hitl/: index.html
(+11 files in other folders)
